--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="row ">
+
+  <div class="col-md-6 d-none d-md-flex">
+    <img src="./assets/images/Login-amico.svg" class="img-fluid" alt="login">
+  </div>
+  <div class="col-md-6 py-5 py-md-0   bg-body-tertiary  align-content-center ">
+    <div class="form  text-main fw-medium ">
+      <h1 class="text-center h2">Login </h1>
+
+
+
+      <form class="w-75 m-auto ">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address :</label>
+          <input type="email" class="form-control" id="exampleInputEmail1">
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password :</label>
+          <input type="password" class="form-control" id="password">
+        </div>
+
+
+        <div class="mb-3 forget-pass">
+          <a class="text-main cursor-pointer"> Forgotten password ?</a>
+        </div>
+        <button type="submit " class="btn btn-main">Submit</button>
+      </form>
+
+
+
+
+    </div>
+
+  </div>
+
+
+</div>
