--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,3 +1,7 @@
 <app-nav-auth></app-nav-auth>
-
-<router-outlet></router-outlet>
+<section class="bg-body-secondary py-5">
+  <div class="container ">
+    <router-outlet></router-outlet>
+  </div>
+</section>
+<app-footer></app-footer>
