--- a/src/app/components/nav-auth/nav-auth.component.html
+++ b/src/app/components/nav-auth/nav-auth.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
   <div class="container">
     <a class="navbar-brand cursor-pointer" routerLink="login">
       <img src="./assets/images/freshcart-logo.svg" alt="Logo">
@@ -38,10 +38,14 @@
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="register" routerLinkActive="active-link">
-            Register
+            Sign up
           </a>
         </li>
       </ul>
+
+
     </div>
+
+
   </div>
 </nav>
