--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="container">
+  <div class="  vh-100 d-flex justify-content-center align-items-center">
+    <img src="./assets/images/error.svg" class="w-75 d-block" alt="error">
+  </div>
+</div>
