--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
     rgba(145, 158, 171, 0.12) 0px 1px 10px 0px;
   --font-family: "Encode Sans Expanded", sans-serif;
   --rating-color: #ffc908;
+  --smooth-transition: 0.6s ease;
 }
 
 body {
@@ -36,17 +37,32 @@ a:hover {
   text-decoration: none;
 }
 
+.form-control:focus {
+  box-shadow: 0 0 0 0.25rem rgba(17, 189, 17, 0.25);
+}
+
 .product {
   border-radius: 5px;
-  border: solid 1px var(--main-color);
+
   transition: box-shadow 0.5s;
   overflow: hidden;
 }
 
 .product:hover {
   box-shadow: 0 0 10px #11bd1168;
+  border-radius: 10px;
 }
 
+.product .btn {
+  transition: transform 0.6s, opacity 0.6s;
+  transform: translateY(100%);
+  opacity: 0;
+}
+
+.product:hover .btn {
+  opacity: 1;
+  transform: translateY(0%);
+}
 .font-sm {
   font-size: 12px;
 }
@@ -68,6 +84,7 @@ a:hover {
   cursor: pointer;
   transition: background-color 0.5s;
 }
+
 .btn-main:disabled {
   cursor: not-allowed;
   background-color: #ccc;
@@ -75,6 +92,20 @@ a:hover {
 .btn-main:disabled:hover {
   background-color: #ccc;
 }
+
+.btn-main:active,
 .btn-main:hover {
-  background-color: #11bd11;
+  background-color: rgb(17, 189, 17) !important;
+  color: white !important;
+}
+
+.product img {
+  transition: 0.7s ease all;
+}
+.product:hover img {
+  transform: scale(1.1);
+}
+
+.img-wrap {
+  overflow: hidden !important;
 }
