--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -45,7 +45,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link cursor-pointer">
+          <a class="nav-link cursor-pointer" (click)="_AuthService.logOut()">
             LogOut
           </a>
         </li>
