--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
 
 
         <div class="mb-3 forget-pass">
-          <a class="text-main cursor-pointer"> Forgotten password ?</a>
+          <a class="text-main cursor-pointer" routerLink="/forgot"> Forgotten password ?</a>
         </div>
 
         <p class="text-danger fw-semibold">{{msgError}} </p>
