--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,27 +1,5 @@
 <section class="py-3">
   <div class="container">
-    <div class="row">
-      @for (product of allProducts; track product._id) {
-      <div class="col-12 col-sm-6 col-md-4 col-lg-custom">
-        <div class="card wrap product cursor-pointer border-0 m-2">
-          <div class="img-wrap">
-            <img [src]="product.imageCover" class="card-img-top" [alt]="product.slug">
-          </div>
-
-          <div class="card-body">
-            <h6 class="card-title text-main fw-semibold">{{product.category.name}}</h6>
-            <h6 class="card-text fw-semibold">
-              {{product.title.split(" ",2).join(" ")}}
-            </h6>
-            <div class="d-flex justify-content-between">
-              <span>{{product.price}} EGP</span>
-              <span><i class="fa fa-star rating-color"></i> {{product.ratingsAverage}}</span>
-            </div>
-            <a class="btn d-block btn-main mt-2">Add To Cart</a>
-          </div>
-        </div>
-      </div>
-      }
-    </div>
+    <app-product></app-product>
   </div>
 </section>
