--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,1 +1,20 @@
-<p>product-details works!</p>
+<div class="container py-5 product-details ">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="">
+        <img [src]="product?.imageCover" class="w-100 d-block" alt="Product Image">
+      </div>
+
+    </div>
+    <div class="col-md-9 mt-5 pt-5">
+      <h2>{{product?.title}}</h2>
+      <p class="text-muted">Brand: {{product?.brand?.name}}</p>
+      <p class="lead text-main">{{product?.price}} EGP</p>
+      <p> {{product?.description}} </p>
+      <button class="btn btn-main btn-lg">Add to Cart</button>
+      <button class="btn btn-outline-secondary btn-lg">Wishlist</button>
+    </div>
+  </div>
+
+
+</div>
