--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
+<app-slider></app-slider>
+<h3>Popular Categories</h3>
+<app-categories-slider></app-categories-slider>
+
+
 <section class="py-3">
   <div class="container">
     <app-product></app-product>
