--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 //owl-carousel imports
 @import "ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
 @import "ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
+//ngx toastr
+@import "ngx-toastr/toastr";
 
 :root {
   --main-color: #0aad0a;
