--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+<ngx-spinner bdColor="rgba(51,51,51,0.9)" size="large" color="#fff" type="ball-spin-clockwise" [fullScreen]="true">
+  <p class="custom-spinner">
+    <img src="./assets/images/loading.svg" alt="Logo" class="spinner-logo">
+  </p>
+</ngx-spinner>
