--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -26,7 +26,7 @@
         <li class="nav-item">
           <a class="nav-link position-relative" routerLink="wishlist">
             <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              20
+              {{wishCounter}}
               <span class="visually-hidden">unread messages</span>
             </span>
             WishList
@@ -36,7 +36,7 @@
         <li class="nav-item">
           <a class="nav-link position-relative" routerLink="cart">
             <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              20
+              {{cartCounter}}
               <span class="visually-hidden">unread messages</span>
             </span>
             Cart
