--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -11,8 +11,7 @@
       <p class="text-muted">Brand: {{product?.brand?.name}}</p>
       <p class="lead text-main">{{product?.price}} EGP</p>
       <p> {{product?.description}} </p>
-      <button class="btn btn-main btn-lg">Add to Cart</button>
-      <button class="btn btn-outline-secondary btn-lg">Wishlist</button>
+      <button class="btn btn-main  col-md-10">Add to Cart</button>
     </div>
   </div>
 
