--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,19 +52,33 @@ a:hover {
   transition: box-shadow 0.5s;
   overflow: hidden;
 }
+@media (min-width: 1200px) {
+  .col-lg-custom {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 5px 0;
+  }
+}
+
+.btn-heart {
+  top: 15px;
+}
 
 .product:hover {
   box-shadow: 0 0 10px #11bd1168;
   border-radius: 10px;
 }
-
-.product .btn {
+.btn-heart-visible {
+  opacity: 1 !important;
+  transform: translateY(0%) !important;
+}
+.product .btn-heart {
   transition: transform 0.6s, opacity 0.6s;
   transform: translateY(100%);
   opacity: 0;
 }
 
-.product:hover .btn {
+.product:hover .btn-heart {
   opacity: 1;
   transform: translateY(0%);
 }
