--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<section class="bg-main-light rounded-4 shadow p-4 my-2 container">
+<section class="rounded-4 shadow p-4 my-2 container bg-danger">
 
   <div class="d-flex justify-content-between">
     <div>
