--- a/src/app/components/all-orders/all-orders.component.html
+++ b/src/app/components/all-orders/all-orders.component.html
@@ -1,1 +1,5 @@
-<p>all-orders works!</p>
+<section class="all-orders">
+  <div class="container">
+    <p>all-orders works!</p>
+  </div>
+</section>
