--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="col-md-3">
       <div class="">
-        <img [src]="product?.imageCover" class="w-100 d-block" alt="Product Image">
+        <img [src]="product.imageCover" class="w-100 d-block" alt="Product Image">
       </div>
 
     </div>
     <div class="col-md-9 mt-5 pt-5">
-      <h2>{{product?.title}}</h2>
-      <p class="text-muted">Brand: {{product?.brand?.name}}</p>
-      <p class="lead text-main">{{product?.price}} EGP</p>
-      <p> {{product?.description}} </p>
-      <button class="btn btn-main  col-md-10">Add to Cart</button>
+      <h2>{{product.title}}</h2>
+      <p class="text-muted">Brand: {{product.brand.name}}</p>
+      <p class="lead text-main">{{product.price}} EGP</p>
+      <p> {{product.description}} </p>
+      <button class="btn btn-main btn-lg">Add to Cart</button>
     </div>
   </div>
 
