--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -3,53 +3,62 @@
     <a class="navbar-brand cursor-pointer" routerLink="home">
       <img src="./assets/images/freshcart-logo.svg" alt="Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Offcanvas Toggle Button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="products">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="categories">Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="brands">Brands</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link position-relative" routerLink="wishlist">
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              {{wishCounter}}
-              <span class="visually-hidden">unread messages</span>
-            </span>
-            WishList
-            <i class="fa-regular fa-heart "></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link position-relative" routerLink="cart">
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-              {{cartCounter}}
-              <span class="visually-hidden">unread messages</span>
-            </span>
-            Cart
-            <i class="fa-solid fa-cart-shopping"></i>
 
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link cursor-pointer" (click)="_AuthService.logOut()">
-            LogOut
-          </a>
-        </li>
-      </ul>
+    <!-- Offcanvas Content -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link " routerLinkActive="active-link" routerLink="home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLinkActive="active-link" routerLink="products">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLinkActive="active-link" routerLink="categories">Categories</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLinkActive="active-link" routerLink="brands">Brands</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLinkActive="active-link" routerLink="allorders">All orders</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link position-relative" routerLink="wishlist">
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                {{wishCounter}}
+              </span>
+              WishList
+              <i class="fa-regular fa-heart"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link position-relative" routerLink="cart">
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                {{cartCounter}}
+              </span>
+              Cart
+              <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link cursor-pointer" (click)="_AuthService.logOut()">
+              LogOut
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
