--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -8,10 +8,11 @@
     </div>
     <div class="col-md-9 mt-5 pt-5">
       <h2>{{product.title}}</h2>
-      <p class="text-muted">Brand: {{product.brand.name}}</p>
-      <p class="lead text-main">{{product.price}} EGP</p>
+      <p class="text-muted">Brand: {{product?.brand?.name}}</p>
+      <p class="lead text-main">{{product.price | currency:'GBP'}}</p>
       <p> {{product.description}} </p>
-      <button class="btn btn-main btn-lg">Add to Cart</button>
+      <button (click)="addToCart(product._id)" class="btn btn-main ">Add to Cart</button>
+      <button (click)="addToWishList(product._id)" class="btn btn-outline-secondary ms-2 ">Wishlist</button>
     </div>
   </div>
 
